--- a/views/pages/products.ejs
+++ b/views/pages/products.ejs
@@ -7,7 +7,7 @@
             <th>Title</th>
             <th>Price</th>
             
-            <th><a  class="btn btn-light" href="/addnewproduct" role="button">ADD NEW</a></th>
+            <th><a  class="btn btn-danger" href="/addnewproduct" role="button">ADD NEW</a></th>
 
         </tr>
     </thead>
