--- a/views/pages/addnewproduct.ejs
+++ b/views/pages/addnewproduct.ejs
@@ -1,6 +1,8 @@
 <% include ../partials/header %>
 
 <form action ="/product/add" method = "post">
+
+<h3>Add new product</h3>
 <div class="form-group">
   <label for=""></label>
   <input type="email"
@@ -13,7 +15,7 @@
     class="form-control" name="password" id="" aria-describedby="helpId" placeholder="">
   <small id="helpId" class="form-text text-muted">Password</small>
 </div>
-<button type="submit" class="btn btn-secondary">Add new</button>
+<button type="submit" class="btn btn-danger">Add new</button>
 </form>
 
 <% include ../partials/footer %>
