--- a/views/pages/addnewproduct.ejs
+++ b/views/pages/addnewproduct.ejs
@@ -5,15 +5,15 @@
 <h3>Add new product</h3>
 <div class="form-group">
   <label for=""></label>
-  <input type="email"
-    class="form-control" name="email" id="" aria-describedby="helpId" placeholder="">
-  <small id="helpId" class="form-text text-muted">Email</small>
+  <input type="text"
+    class="form-control" name="tital" id="" aria-describedby="helpId" placeholder="">
+  <small id="helpId" class="form-text text-muted">Tital</small>
 </div>
 <div class="form-group">
   <label for=""></label>
-  <input type="password"
-    class="form-control" name="password" id="" aria-describedby="helpId" placeholder="">
-  <small id="helpId" class="form-text text-muted">Password</small>
+  <input type="number"
+    class="form-control" name="price" id="" aria-describedby="helpId" placeholder="">
+  <small id="helpId" class="form-text text-muted">Price</small>
 </div>
 <button type="submit" class="btn btn-danger">Add new</button>
 </form>
