--- a/views/pages/addnewproduct.ejs
+++ b/views/pages/addnewproduct.ejs
@@ -1,18 +1,18 @@
 <% include ../partials/header %>
 
-<form action ="/product/add" method = "post">
+<form action ="/product/addproduct" method = "post">
 
 <h3>Add new product</h3>
 <div class="form-group">
   <label for=""></label>
   <input type="text"
-    class="form-control" name="tital" id="" aria-describedby="helpId" placeholder="">
-  <small id="helpId" class="form-text text-muted">Tital</small>
+    class="form-control" name="title" id="" aria-describedby="helpId" placeholder="Title">
+  <small id="helpId" class="form-text text-muted">Title</small>
 </div>
 <div class="form-group">
   <label for=""></label>
   <input type="number"
-    class="form-control" name="price" id="" aria-describedby="helpId" placeholder="">
+    class="form-control" name="price" id="" aria-describedby="helpId" placeholder="Price">
   <small id="helpId" class="form-text text-muted">Price</small>
 </div>
 <button type="submit" class="btn btn-danger">Add new</button>
