--- a/views/pages/users.ejs
+++ b/views/pages/users.ejs
@@ -6,6 +6,8 @@
             <th>ID</th>
             <th>Email</th>
             <th>password</th>
+             
+            <th><a  class="btn btn-danger" href="/addnewuser" role="button">ADD NEW</a></th>
         </tr>
     </thead>
     <tbody>
