--- a/views/pages/users.ejs
+++ b/views/pages/users.ejs
@@ -16,6 +16,9 @@
             <td scope="row"><%= user.id %></td>
             <td><%= user.email %></td>
             <td><%= user.password %></td>
+            <td>
+            <a  class="btn btn-primary" href="/products/<%= product.id %>" role="button">EDIT</a>
+            </td>
         </tr>
     <% }); %>
         
