--- a/views/pages/users.ejs
+++ b/views/pages/users.ejs
@@ -17,7 +17,7 @@
             <td><%= user.email %></td>
             <td><%= user.password %></td>
             <td>
-            <a  class="btn btn-primary" href="/products/<%= product.id %>" role="button">EDIT</a>
+            <a  class="btn btn-primary" href="/user/<%= user.id %>" role="button">EDIT</a>
             </td>
         </tr>
     <% }); %>
