--- a/views/pages/addnewuser.ejs
+++ b/views/pages/addnewuser.ejs
@@ -2,18 +2,18 @@
 
 <form action ="/product/adduser" method = "post">
 
-<h3>Add new product</h3>
+<h3>Add new user</h3>
 <div class="form-group">
   <label for=""></label>
   <input type="email"
     class="form-control" name="email" id="" aria-describedby="helpId" placeholder="Email">
-  <small id="helpId" class="form-text text-muted">email</small>
+  <small id="helpId" class="form-text text-muted"></small>
 </div>
 <div class="form-group">
   <label for=""></label>
   <input type="password"
     class="form-control" name="password" id="" aria-describedby="helpId" placeholder="Password">
-  <small id="helpId" class="form-text text-muted">Password</small>
+  <small id="helpId" class="form-text text-muted"></small>
 </div>
 <button type="submit" class="btn btn-danger">Add new</button>
 </form>
