--- a/views/pages/addnewproduct.ejs
+++ b/views/pages/addnewproduct.ejs
@@ -7,13 +7,13 @@
   <label for=""></label>
   <input type="text"
     class="form-control" name="title" id="" aria-describedby="helpId" placeholder="Title">
-  <small id="helpId" class="form-text text-muted">Title</small>
+  <small id="helpId" class="form-text text-muted"></small>
 </div>
 <div class="form-group">
   <label for=""></label>
   <input type="number"
     class="form-control" name="price" id="" aria-describedby="helpId" placeholder="Price">
-  <small id="helpId" class="form-text text-muted">Price</small>
+  <small id="helpId" class="form-text text-muted"></small>
 </div>
 <button type="submit" class="btn btn-danger">Add new</button>
 </form>
