--- a/views/pages/users_edit.ejs
+++ b/views/pages/users_edit.ejs
@@ -16,8 +16,8 @@
 </div>
 <div class="form-group">
   <label for="">Password</label>
-  <input type="number"
-    class="form-control" value="<%= users.email %>" name="password" id="" aria-describedby="helpId" placeholder="">
+  <input type="password"
+    class="form-control" value="<%= users.password %>" name="password" id="" aria-describedby="helpId" placeholder="">
   <small id="helpId" class="form-text text-muted">Users PASSWORD</small>
 </div>
 <button type="submit" class="btn btn-secondary">CANCLE</button>
