--- a/views/pages/users_edit.ejs
+++ b/views/pages/users_edit.ejs
@@ -1,24 +1,24 @@
 <% include ../partials/header %>
-<form action ="/users/update" method = "post">
+<form action ="/user/update" method = "post">
 <div class="jumbotron">
 <h1 class="display-4">USERS</h1>
 <div class="form-group">
   <label for="">ID</label>
   <input type="number"
-    class="form-control" value="<%= users.id %>" name="id" id="" aria-describedby="helpId" placeholder="">
-  <small id="helpId" class="form-text text-muted">Users ID</small>
+    class="form-control" value="<%= user.id %>" name="id" id="" aria-describedby="helpId" placeholder="">
+  <small id="helpId" class="form-text text-muted">User ID</small>
 </div>
 <div class="form-group">
   <label for="">Email</label>
   <input type="email"
-    class="form-control" value="<%= users.email %>" name="email" id="" aria-describedby="helpId" placeholder="">
-  <small id="helpId" class="form-text text-muted">Users EMAIL</small>
+    class="form-control" value="<%= user.email %>" name="email" id="" aria-describedby="helpId" placeholder="">
+  <small id="helpId" class="form-text text-muted">User EMAIL</small>
 </div>
 <div class="form-group">
   <label for="">Password</label>
   <input type="password"
-    class="form-control" value="<%= users.password %>" name="password" id="" aria-describedby="helpId" placeholder="">
-  <small id="helpId" class="form-text text-muted">Users PASSWORD</small>
+    class="form-control" value="<%= user.password %>" name="password" id="" aria-describedby="helpId" placeholder="">
+  <small id="helpId" class="form-text text-muted">User PASSWORD</small>
 </div>
 <button type="submit" class="btn btn-secondary">CANCLE</button>
 <button type="submit" class="btn btn-success">SAVE</button>
