--- a/views/pages/user_edit.ejs
+++ b/views/pages/user_edit.ejs
@@ -6,19 +6,19 @@
   <label for="">ID</label>
   <input type="number"
     class="form-control" value="<%= user.id %>" name="id" id="" aria-describedby="helpId" placeholder="">
-  <small id="helpId" class="form-text text-muted">User ID</small>
+  <small id="helpId" class="form-text text-muted">User Id</small>
 </div>
 <div class="form-group">
   <label for="">Email</label>
   <input type="email"
     class="form-control" value="<%= user.email %>" name="email" id="" aria-describedby="helpId" placeholder="">
-  <small id="helpId" class="form-text text-muted">User EMAIL</small>
+  <small id="helpId" class="form-text text-muted">User Email</small>
 </div>
 <div class="form-group">
   <label for="">Password</label>
   <input type="password"
     class="form-control" value="<%= user.password %>" name="password" id="" aria-describedby="helpId" placeholder="">
-  <small id="helpId" class="form-text text-muted">User PASSWORD</small>
+  <small id="helpId" class="form-text text-muted">User Password</small>
 </div>
 <button type="submit" class="btn btn-secondary">CANCLE</button>
 <button type="submit" class="btn btn-success">SAVE</button>
