--- a/views/pages/addnewproduct.ejs
+++ b/views/pages/addnewproduct.ejs
@@ -1,8 +1,8 @@
 <% include ../partials/header %>
 
 <form action ="/product/addproduct" method = "post">
-
-<h3>Add new product</h3>
+<div class="jumbotron">
+<h4>Add new product</h4>
 <div class="form-group">
   <label for=""></label>
   <input type="text"
@@ -16,6 +16,7 @@
   <small id="helpId" class="form-text text-muted"></small>
 </div>
 <button type="submit" class="btn btn-danger">Add new</button>
+</div>
 </form>
 
 <% include ../partials/footer %>
