--- a/views/pages/addnewproduct.ejs
+++ b/views/pages/addnewproduct.ejs
@@ -2,7 +2,13 @@
 
 <form action ="/product/addproduct" method = "post">
 <div class="jumbotron">
-<h4>Add new product</h4>
+<h4>ADD NEW PRODUCT</h4>
+<div class="form-group">
+  <label for=""></label>
+  <input type="number"
+    class="form-control" name="id" id="" aria-describedby="helpId" placeholder="ID">
+  <small id="helpId" class="form-text text-muted"></small>
+</div>
 <div class="form-group">
   <label for=""></label>
   <input type="text"
