--- a/views/pages/addnewuser.ejs
+++ b/views/pages/addnewuser.ejs
@@ -1,8 +1,14 @@
 <% include ../partials/header %>
 
 <form action ="/product/adduser" method = "post">
-
-<h3>Add new user</h3>
+<div class="jumbotron">
+<h4>ADD NEW USER</h4>
+<div class="form-group">
+  <label for=""></label>
+  <input type="number"
+    class="form-control" name="id" id="" aria-describedby="helpId" placeholder="ID">
+  <small id="helpId" class="form-text text-muted"></small>
+</div>
 <div class="form-group">
   <label for=""></label>
   <input type="email"
@@ -16,6 +22,7 @@
   <small id="helpId" class="form-text text-muted"></small>
 </div>
 <button type="submit" class="btn btn-danger">Add new</button>
+</div>
 </form>
 
 <% include ../partials/footer %>
