--- a/views/pages/addnewproduct.ejs
+++ b/views/pages/addnewproduct.ejs
@@ -2,7 +2,7 @@
 
 <form action ="/product/addproduct" method = "post">
 <div class="jumbotron">
-<h1>ADD NEW PRODUCT</h1>
+<h1 class="display-4">ADD NEW PRODUCT</h1>
 <div class="form-group">
   <label for=""></label>
   <input type="number"
