--- a/views/pages/addnewuser.ejs
+++ b/views/pages/addnewuser.ejs
@@ -22,6 +22,7 @@
   <small id="helpId" class="form-text text-muted"></small>
 </div>
 <button type="submit" class="btn btn-danger">Add new</button>
+<button type="submit" class="btn btn-light">CANCLE</button>
 </div>
 </form>
 
