--- a/views/pages/addnewuser.ejs
+++ b/views/pages/addnewuser.ejs
@@ -21,8 +21,9 @@
     class="form-control" name="password" id="" aria-describedby="helpId" placeholder="Password">
   <small id="helpId" class="form-text text-muted"></small>
 </div>
+<button type="submit" class="btn btn-Basic">CANCLE</button>
 <button type="submit" class="btn btn-danger">Add new</button>
-<button type="submit" class="btn btn-light">CANCLE</button>
+
 </div>
 </form>
 
