--- a/views/pages/addnewproduct.ejs
+++ b/views/pages/addnewproduct.ejs
@@ -21,8 +21,8 @@
     class="form-control" name="price" id="" aria-describedby="helpId" placeholder="Price">
   <small id="helpId" class="form-text text-muted"></small>
 </div>
-<button type="submit" class="btn btn-Basic">CANCLE</button>
-<button type="submit" class="btn btn-danger">ADD NEW</button>
+<button type="submit" class="btn btn-gray">CANCLE</button>
+<button type="submit" class="btn btn-primary">ADD NEW</button>
 
 </div>
 </form>
