--- a/views/pages/addnewuser.ejs
+++ b/views/pages/addnewuser.ejs
@@ -21,7 +21,7 @@
     class="form-control" name="password" id="" aria-describedby="helpId" placeholder="Password">
   <small id="helpId" class="form-text text-muted"></small>
 </div>
-<button type="submit" class="btn btn-gray">CANCLE</button>
+<button type="submit" class="btn btn-secondary">CANCLE</button>
 <button type="submit" class="btn btn-primary">Add new</button>
 
 </div>
