--- a/views/pages/addnewproduct.ejs
+++ b/views/pages/addnewproduct.ejs
@@ -4,22 +4,22 @@
 <div class="jumbotron">
 <h1 class="display-4">ADD NEW PRODUCT</h1>
 <div class="form-group">
-  <label for=""></label>
+  <label for="">ID</label>
   <input type="number"
-    class="form-control" name="id" id="" aria-describedby="helpId" placeholder="ID">
-  <small id="helpId" class="form-text text-muted"></small>
+    class="form-control" name="id" id="" aria-describedby="helpId" placeholder="">
+  <small id="helpId" class="form-text text-muted">ID</small>
 </div>
 <div class="form-group">
-  <label for=""></label>
+  <label for="">Title</label>
   <input type="text"
-    class="form-control" name="title" id="" aria-describedby="helpId" placeholder="Title">
-  <small id="helpId" class="form-text text-muted"></small>
+    class="form-control" name="title" id="" aria-describedby="helpId" placeholder="">
+  <small id="helpId" class="form-text text-muted">Title</small>
 </div>
 <div class="form-group">
-  <label for=""></label>
+  <label for="">Price</label>
   <input type="number"
-    class="form-control" name="price" id="" aria-describedby="helpId" placeholder="Price">
-  <small id="helpId" class="form-text text-muted"></small>
+    class="form-control" name="price" id="" aria-describedby="helpId" placeholder="">
+  <small id="helpId" class="form-text text-muted">Price</small>
 </div>
 <button type="submit" class="btn btn-secondary">CANCLE</button>
 <button type="submit" class="btn btn-primary">ADD NEW</button>
