--- a/views/pages/addnewuser.ejs
+++ b/views/pages/addnewuser.ejs
@@ -22,7 +22,7 @@
   <small id="helpId" class="form-text text-muted"></small>
 </div>
 <button type="submit" class="btn btn-secondary">CANCLE</button>
-<button type="submit" class="btn btn-primary">Add new</button>
+<button type="submit" class="btn btn-primary">ADD NEW</button>
 
 </div>
 </form>
