--- a/views/pages/addnewproduct.ejs
+++ b/views/pages/addnewproduct.ejs
@@ -1,5 +1,4 @@
 <% include ../partials/header %>
-
 <form action ="/product/addproduct" method = "post">
 <div class="jumbotron">
 <h1 class="display-4">ADD NEW PRODUCT</h1>
@@ -19,6 +18,12 @@
   <label for="">Price</label>
   <input type="number"
     class="form-control" name="price" id="" aria-describedby="helpId" placeholder="Price">
+  <small id="helpId" class="form-text text-muted"></small>
+</div>
+<div class="form-group">
+  <label for="">Creat At</label>
+  <input type="text|password|email|number|submit|date|datetime|datetime-local|month|color|range|search|tel|time|url|week"
+    class="form-control" name="" id="" aria-describedby="helpId" placeholder="Creat At">
   <small id="helpId" class="form-text text-muted"></small>
 </div>
 <button type="submit" class="btn btn-secondary">CANCLE</button>
