--- a/views/pages/product_edit.ejs
+++ b/views/pages/product_edit.ejs
@@ -22,7 +22,7 @@
 </div>
 <button type="submit" class="btn btn-secondary">CANCLE</button>
 <button type="submit" class="btn btn-success">SAVE</button>
-<button type="submit" class="btn btn-danger">DELETE</button>
+<a name="" id="" class="btn btn-danger" href="/product_delete/<%= product.id %>" role="button">Delete</a>
 
 </div>
 </form>
