--- a/views/pages/addnewproduct.ejs
+++ b/views/pages/addnewproduct.ejs
@@ -1,5 +1,5 @@
 <% include ../partials/header %>
-<form action ="/product/addproduct" method = "post">
+<form   method = "post">
 <div class="jumbotron">
 <h1 class="display-4">ADD NEW PRODUCT</h1>
 <div class="form-group">
