--- a/views/pages/addnewuser.ejs
+++ b/views/pages/addnewuser.ejs
@@ -1,6 +1,5 @@
 <% include ../partials/header %>
-
-<form action ="/product/adduser" method = "post">
+<form action ="/adduser" method = "post">
 <div class="jumbotron">
 <h1 class="display-4">ADD NEW USER</h1>
 <div class="form-group">
