--- a/views/pages/addnewuser.ejs
+++ b/views/pages/addnewuser.ejs
@@ -1,5 +1,6 @@
 <% include ../partials/header %>
-<form action ="/adduser" method = "post">
+
+<form action ="/product/adduser" method = "post">
 <div class="jumbotron">
 <h1 class="display-4">ADD NEW USER</h1>
 <div class="form-group">
