--- a/views/pages/addnewproduct.ejs
+++ b/views/pages/addnewproduct.ejs
@@ -1,5 +1,5 @@
 <% include ../partials/header %>
-<form action="/product/addnewproduct"  method = "post">
+<form action="/addnewproduct"  method = "post">
 <div class="jumbotron">
 <h1 class="display-4">ADD NEW PRODUCT</h1>
 <div class="form-group">
@@ -21,7 +21,7 @@
   <small id="helpId" class="form-text text-muted"></small>
 </div>
 
-<button type="submit" class="btn btn-secondary">CANCLE</button>
+<a name="" id="" class="btn btn-secondary" href="/newproduct" role="button"></a>
 <button type="submit" class="btn btn-primary">ADD NEW</button>
 
 </div>
