--- a/views/pages/users.ejs
+++ b/views/pages/users.ejs
@@ -7,7 +7,7 @@
             <th>Email</th>
             <th>password</th>
              
-            <th><a  class="btn btn-danger" href="/addnewuser" role="button">ADD NEW</a></th>
+            <th><a  class="btn btn-danger" href="/newuser" role="button">ADD NEW</a></th>
         </tr>
     </thead>
     <tbody>
