--- a/views/pages/addnewuser.ejs
+++ b/views/pages/addnewuser.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/header %>
 
-<form action ="/product/adduser" method = "post">
+<form action ="/addnewuser" method = "post">
 <div class="jumbotron">
 <h1 class="display-4">ADD NEW USER</h1>
 <div class="form-group">
@@ -21,6 +21,7 @@
     class="form-control" name="password" id="" aria-describedby="helpId" placeholder="Password">
   <small id="helpId" class="form-text text-muted"></small>
 </div>
+
 <a name="" id="" class="btn btn-secondary" href="/users" role="button">CANCLE</a>
 <button type="submit" class="btn btn-primary">ADD NEW</button>
 
