--- a/views/pages/user_edit.ejs
+++ b/views/pages/user_edit.ejs
@@ -31,7 +31,7 @@ alert('Do you want to delete product');
 </div>
 <a name="" id="" class="btn btn-success" href="/users" role="button">CANCLE</a>
 <button type="submit" class="btn btn-success">SAVE</button>
-<a name="" id="" OnClick="JavaScript:fncAlert();" class="btn btn-danger" href="/users_delete/<%= user.id %>" role="button">DELETE</a>
+<a name="" id="" OnClick="JavaScript:fncAlert();" class="btn btn-danger" href="/user_delete/<%= user.id %>" role="button">DELETE</a>
 
 </div>
 </form>
