--- a/views/pages/product_edit.ejs
+++ b/views/pages/product_edit.ejs
@@ -28,6 +28,14 @@ alert('Do you want to delete product');
     class="form-control" value="<%= product.price %>" name="price" id="" aria-describedby="helpId" placeholder="">
   <small id="helpId" class="form-text text-muted">Product Price</small>
 </div>
+<div class="form-group">
+  <label for="">Creat At</label>
+  <input type="datetime"
+    class="form-control" name="creat at" id="" aria-describedby="helpId" placeholder="">
+  <small id="helpId" class="form-text text-muted">Creat At</small>
+</div>
+
+
 <a name="" id="" class="btn btn-success" href="/products" role="button">CANCLE</a>
 <button type="submit" class="btn btn-success">SAVE</button>
 <a name="" id="" OnClick="JavaScript:fncAlert();" class="btn btn-danger" href="/product_delete/<%= product.id %>" role="button">DELETE</a>
