--- a/views/pages/user_edit.ejs
+++ b/views/pages/user_edit.ejs
@@ -30,11 +30,18 @@ alert('Do you want to delete product');
   <small id="helpId" class="form-text text-muted">User Password</small>
 </div>
 <div class="form-group">
-  <label for=""></label>
+  <label for="">Creat At</label>
   <input type="datetime"
-    class="form-control" name="creat at" id="" aria-describedby="helpId" placeholder="">
+    class='input-group date' id='datetimepicker1' name="creat at" id="" aria-describedby="helpId" placeholder=""><span class="input-group-addon">
+      <span class="glyphicon glyphicon-calendar"></span>
+    <script type="text/javascript">
+            $(function () {
+                $('#datetimepicker1').datetimepicker();
+            });
+        </script>                
   <small id="helpId" class="form-text text-muted">Creat At</small>
 </div>
+
 <a name="" id="" class="btn btn-success" href="/users" role="button">CANCLE</a>
 <button type="submit" class="btn btn-success">SAVE</button>
 <a name="" id="" OnClick="JavaScript:fncAlert();" class="btn btn-danger" href="/user_delete/<%= user.id %>" role="button">DELETE</a>
