--- a/views/pages/product_edit.ejs
+++ b/views/pages/product_edit.ejs
@@ -35,8 +35,7 @@ alert('Do you want to delete product');
 //   <small id="helpId" class="form-text text-muted">Creat At</small>
 // </div>-->
 
-
-<a name="" id="" class="btn btn-success" href="/products" role="button">CANCLE</a>
+<a name="" id="" class="btn btn-secondary" href="/products" role="button">CANCLE</a>
 <button type="submit" class="btn btn-success">SAVE</button>
 <a name="" id="" OnClick="JavaScript:fncAlert();" class="btn btn-danger" href="/product_delete/<%= product.id %>" role="button">DELETE</a>
 
