--- a/views/pages/user_edit.ejs
+++ b/views/pages/user_edit.ejs
@@ -36,7 +36,7 @@ alert('Do you want to delete product');
   <small id="helpId" class="form-text text-muted">Creat At</small>
 </div>-->
 
-<a name="" id="" class="btn btn-success" href="/users" role="button">CANCLE</a>
+<a name="" id="" class="btn btn-secondary" href="/users" role="button">CANCLE</a>
 <button type="submit" class="btn btn-success">SAVE</button>
 <a name="" id="" OnClick="JavaScript:fncAlert();" class="btn btn-danger" href="/user_delete/<%= user.id %>" role="button">DELETE</a>
 
