--- a/views/pages/product_edit.ejs
+++ b/views/pages/product_edit.ejs
@@ -31,17 +31,15 @@ alert('Do you want to delete product');
 <div class="form-group">
 <label for="">Creat At</label>
 <input type="datetime"
- class="input-append date form_datetime"  <input size="16" type="text" value="" readonly name="creat at" id="" aria-describedby="helpId" placeholder="">
+ class="input-append date form_datetime"  name="datetime" id="" aria-describedby="helpId" placeholder="">
+ <input size="16" type="text" value="" readonly>
  <span class="add-on"><i class="icon-th"></i></span>
 <small id="helpId" class="form-text text-muted">Creat At</small>
 <script type="text/javascript">
-
     $(".form_datetime").datetimepicker({
-
         format: "dd MM yyyy - hh:ii"
     });
-
-</script> 
+</script>   
 </div>
 
 
