--- a/views/pages/product_edit.ejs
+++ b/views/pages/product_edit.ejs
@@ -31,17 +31,15 @@ alert('Do you want to delete product');
 <div class="form-group">
 <label for="">Creat At</label>
 <input type="datetime"
- class="input-append date form_datetime"  name="datetime" id="" aria-describedby="helpId" placeholder="">
- <input size="16" type="text" value="" readonly>
- <span class="add-on"><i class="icon-th"></i></span>
+ class=""  name="datetime" id="" aria-describedby="helpId" placeholder="">
+<input size="16" type="text" value="2012-06-15 14:45" readonly class="form_datetime"
+<script type="text/javascript">
+    $(".form_datetime").datetimepicker({format: 'yyyy-mm-dd hh:ii'});
+</script>    
 <small id="helpId" class="form-text text-muted">Creat At</small>
 
 </div>
-<script type="text/javascript">
-    $(".form_datetime").datetimepicker({
-        format: "dd MM yyyy - hh:ii"
-    });
-</script>   
+
 
 
 <a name="" id="" class="btn btn-secondary" href="/products" role="button">CANCLE</a>
