--- a/views/pages/product_edit.ejs
+++ b/views/pages/product_edit.ejs
@@ -28,10 +28,11 @@
         placeholder="">
       <small id="helpId" class="form-text text-muted">Product Price</small>
     </div>
+
     <div class="form-group">
       <label for="">Creat At</label>
-      <input type="datetime" class='input-group date' name="creat at" id='datetimepicker1' aria-describedby="helpId"
-        placeholder="">
+      <!----<input type="datetime" class='input-group date' name="creat at" id='datetimepicker1' aria-describedby="helpId"
+        placeholder="">-->
       <input type='text' class="form-control" />
       <span class="input-group-addon">
         <span class="glyphicon glyphicon-calendar"></span>
@@ -39,7 +40,7 @@
       <small id="helpId" class="form-text text-muted">Creat At</small>
       <script type="text/javascript">
         $(function () {
-            $('#datetimepicker1').datetimepicker();
+            
         });
     </script>
     </div>
