--- a/views/pages/product_edit.ejs
+++ b/views/pages/product_edit.ejs
@@ -1,57 +1,46 @@
 <% include ../partials/header %>
 <script language="javascript">
-  function fncAlert() {
+function fncAlert(){
 
-    alert('Do you want to delete product');
+alert('Do you want to delete product');
 
-  }
+}
 
 </script>
-<form action="/product/update" method="post">
-  <div class="jumbotron">
-    <h1 class="display-4">PRODUCT</h1>
-    <div class="form-group">
-      <label for="">ID</label>
-      <input type="number" class="form-control" value="<%= product.id %>" name="id" id="" aria-describedby="helpId"
-        placeholder="">
-      <small id="helpId" class="form-text text-muted">Product ID</small>
-    </div>
-    <div class="form-group">
-      <label for="">Title</label>
-      <input type="text" class="form-control" value="<%= product.title %>" name="title" id="" aria-describedby="helpId"
-        placeholder="">
-      <small id="helpId" class="form-text text-muted">Product Title</small>
-    </div>
-    <div class="form-group">
-      <label for="">Price</label>
-      <input type="number" class="form-control" value="<%= product.price %>" name="price" id="" aria-describedby="helpId"
-        placeholder="">
-      <small id="helpId" class="form-text text-muted">Product Price</small>
-    </div>
-
-    <div class="form-group">
-      <label for="">Creat At</label>
-      <!----<input type="datetime" class='input-group date' name="creat at" id='datetimepicker1' aria-describedby="helpId"
-        placeholder="">-->
-      <input type='text' class="form-control" />
-      <span class="input-group-addon">
-        <span class="glyphicon glyphicon-calendar"></span>
-      </span>
-      <small id="helpId" class="form-text text-muted">Creat At</small>
-      <script type="text/javascript">
-        $(function () {
-            
-        });
-    </script>
-    </div>
+<form action ="/product/update" method = "post">
+<div class="jumbotron">
+<h1 class="display-4">PRODUCT</h1>
+<div class="form-group">
+  <label for="">ID</label>
+  <input type="number"
+    class="form-control" value="<%= product.id %>" name="id" id="" aria-describedby="helpId" placeholder="">
+  <small id="helpId" class="form-text text-muted">Product ID</small>
+</div>
+<div class="form-group">
+  <label for="">Title</label>
+  <input type="text"
+    class="form-control" value="<%= product.title %>" name="title" id="" aria-describedby="helpId" placeholder="">
+  <small id="helpId" class="form-text text-muted">Product Title</small>
+</div>
+<div class="form-group">
+  <label for="">Price</label>
+  <input type="number"
+    class="form-control" value="<%= product.price %>" name="price" id="" aria-describedby="helpId" placeholder="">
+  <small id="helpId" class="form-text text-muted">Product Price</small>
+</div>
+<div class="form-group">
+  <label for="">Creat At</label>
+  <input type="datetime"
+    class="form-control" name="creat at" id="" aria-describedby="helpId" placeholder="">
+  <small id="helpId" class="form-text text-muted">Creat At</small>
+</div>
 
 
-    <a name="" id="" class="btn btn-success" href="/products" role="button">CANCLE</a>
-    <button type="submit" class="btn btn-success">SAVE</button>
-    <a name="" id="" OnClick="JavaScript:fncAlert();" class="btn btn-danger" href="/product_delete/<%= product.id %>"
-      role="button">DELETE</a>
+<a name="" id="" class="btn btn-success" href="/products" role="button">CANCLE</a>
+<button type="submit" class="btn btn-success">SAVE</button>
+<a name="" id="" OnClick="JavaScript:fncAlert();" class="btn btn-danger" href="/product_delete/<%= product.id %>" role="button">DELETE</a>
 
-  </div>
+</div>
 </form>
 
 
