--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/header %>
 <div class="jumbotron">
-            <h1 class="display-3">Express.JS</h1>
+            <h1 class="display-3">ExpressTEST</h1>
             <p class="lead">Static content </p>
             <hr class="my-2">
             <p>About me</p>
