--- a/views/pages/user_edit.ejs
+++ b/views/pages/user_edit.ejs
@@ -29,12 +29,12 @@ alert('Do you want to delete product');
     class="form-control" value="<%= user.password %>" name="password" id="" aria-describedby="helpId" placeholder="">
   <small id="helpId" class="form-text text-muted">User Password</small>
 </div>
-<!--<div class="form-group">
+<div class="form-group">
   <label for="">Creat At</label>
   <input type="datetime"
     class="form-control" name="creat at" id="" aria-describedby="helpId" placeholder="">
   <small id="helpId" class="form-text text-muted">Creat At</small>
-</div>-->
+</div>
 
 <a name="" id="" class="btn btn-secondary" href="/users" role="button">CANCLE</a>
 <button type="submit" class="btn btn-success">SAVE</button>
