--- a/views/pages/user_edit.ejs
+++ b/views/pages/user_edit.ejs
@@ -31,8 +31,8 @@ alert('Do you want to delete product');
 </div>
 <div class="form-group">
   <label for="">Creat At</label>
-  <input type="datetime"
-    class="form-control" name="creat at" id="" aria-describedby="helpId" placeholder="">
+  <input type="text"
+    class="form-control" value="<%= time %>"name="creat at" id="" aria-describedby="helpId" placeholder="">
   <small id="helpId" class="form-text text-muted">Creat At</small>
 </div>
 
