--- a/views/pages/product_edit.ejs
+++ b/views/pages/product_edit.ejs
@@ -30,15 +30,10 @@ alert('Do you want to delete product');
 </div>
 
 <div class="form-group">
-<label for="">Creat At</label>
-<input type="datetime"
- class=""  name="datetime" id="" aria-describedby="helpId" placeholder="">
-<input size="16" type="text" value="2012-06-15 14:45" readonly class="form_datetime"
-<script type="text/javascript">
-    
-</script>    
-<small id="helpId" class="form-text text-muted">Creat At</small>
-
+  <label for="">Creat At</label>
+  <input type="datetime"
+    class="form-control" name="creat at" id="" aria-describedby="helpId" placeholder="">
+  <small id="helpId" class="form-text text-muted">Creat At</small>
 </div>
 
 
