--- a/views/pages/user_edit.ejs
+++ b/views/pages/user_edit.ejs
@@ -33,7 +33,7 @@ alert('Do you want to delete product');
 <div class="form-group">
   <label for="">Creat At</label>
   <input type="text"
-    class="form-control" value="<%= time %>" name="creat at" id="" aria-describedby="helpId" placeholder="">
+    class="form-control" value="" name="creat at" id="" aria-describedby="helpId" placeholder="">
   <small id="helpId" class="form-text text-muted">Creat At</small>
 </div>
 
