--- a/views/pages/addnewuser.ejs
+++ b/views/pages/addnewuser.ejs
@@ -21,7 +21,12 @@
     class="form-control" name="password" id="" aria-describedby="helpId" placeholder="Password">
   <small id="helpId" class="form-text text-muted"></small>
 </div>
-
+<div class="form-group">
+  <label for=""></label>
+  <input type="text"
+    class="form-control" value="<%= time %>"name="password" id="" aria-describedby="helpId" placeholder="Password">
+  <small id="helpId" class="form-text text-muted"></small>
+</div>
 <a name="" id="" class="btn btn-secondary" href="/users" role="button">CANCLE</a>
 <button type="submit" class="btn btn-primary">ADD NEW</button>
 
