--- a/views/pages/user_edit.ejs
+++ b/views/pages/user_edit.ejs
@@ -35,6 +35,12 @@ alert('Do you want to delete product');
   <input type="text"
     class="form-control" value="<%= time %>" name="creat at" id="" aria-describedby="helpId" placeholder="" disabled>
   <small id="helpId" class="form-text text-muted">Creat At</small>
+  <div class='input-group date' id='datetimepicker1'>
+    <input type='text' class="form-control" />
+    <span class="input-group-addon">
+        <span class="glyphicon glyphicon-calendar"></span>
+    </span>
+</div>
 </div>
 
 <a name="" id="" class="btn btn-secondary" href="/users" role="button">CANCLE</a>
@@ -43,6 +49,10 @@ alert('Do you want to delete product');
 
 </div>
 </form>
-
+<script type="text/javascript">
+  $(function () {
+      $('#datetimepicker1').datetimepicker();
+  });
+</script>
 
 <% include ../partials/footer %>
