--- a/views/pages/user_edit.ejs
+++ b/views/pages/user_edit.ejs
@@ -34,23 +34,24 @@ alert('Do you want to delete product');
 <div class="form-group">
   <label for="">Creat At</label>
   <input type="text"
-    class="form-control" value="<%= time %>" name="creat at" id="" aria-describedby="helpId" placeholder="" disabled>
-  <small id="helpId" class="form-text text-muted">Creat At</small>
-  <div class="input-append date form_datetime">
-    <input size="16" type="text" value="" readonly>
-    <span class="add-on"><i class="icon-th"></i></span>
-</div>
+  class="input-append date form_datetime" value="<%= time %>" name="creat at" id="" aria-describedby="helpId" placeholder="" disabled>
+  <small id="helpId" class="form-text text-muted">Creat At</small> <input size="16" type="text" value="" readonly>
+  <span class="add-on"><i class="icon-th"></i></span>
+
+  
+    <script type="text/javascript">
+      $(".form_datetime").datetimepicker({
+          format: "dd MM yyyy - hh:ii"
+      });
+    </script> 
+
 </div>
 
 <a name="" id="" class="btn btn-secondary" href="/users" role="button">CANCLE</a>
 <button type="submit" class="btn btn-success">SAVE</button>
 <a name="" id="" OnClick="JavaScript:fncAlert();" class="btn btn-danger" href="/user_delete/<%= user.id %>" role="button">DELETE</a>
 
-<script type="text/javascript">
-  $(".form_datetime").datetimepicker({
-      format: "dd MM yyyy - hh:ii"
-  });
-</script> 
+
 </div>
 </form>
 
