--- a/views/pages/user_edit.ejs
+++ b/views/pages/user_edit.ejs
@@ -34,17 +34,9 @@ alert('Do you want to delete product');
 <div class="form-group">
   <label for="">Creat At</label>
   <input type="text"
-  class="input-append date form_datetime" value="<%= time %>" name="creat at" id="" aria-describedby="helpId" placeholder="" disabled>
-  <small id="helpId" class="form-text text-muted">Creat At</small> <input size="16" type="text" value="" readonly>
-  <span class="add-on"><i class="icon-th"></i></span>
-
+    class="form-control" value="<%= time %>" name="creat at" id="" aria-describedby="helpId" placeholder="" disabled>
+  <small id="helpId" class="form-text text-muted">Creat At</small>
   
-    <script type="text/javascript">
-      $(".form_datetime").datetimepicker({
-          format: "dd MM yyyy - hh:ii"
-      });
-    </script> 
-
 </div>
 
 <a name="" id="" class="btn btn-secondary" href="/users" role="button">CANCLE</a>
