--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,11 +1,11 @@
 <% include ../partials/header %>
 <div class="jumbotron">
-            <h1 class="display-3">ExpressTEST</h1>
-            <p class="lead">Static content </p>
+            <h1 class="display-3">Project I</h1>
+            <p class="lead">Miss Tansuta Ratkaew </p>
             <hr class="my-2">
-            <p>About me</p>
+            <p>tansuta.r</p>
             <p class="lead">
-                <a class="btn btn-primary btn-lg" href="about" role="button">view</a>
+                <a class="btn btn-primary btn-lg" href="/products" role="button">view</a>
             </p>
         </div>
 
