--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,11 +1,12 @@
 <% include ../partials/header %>
 <div class="jumbotron">
-            <h1 class="display-3">Project I</h1>
-            <p class="lead">Miss Tansuta Ratkaew </p>
+            <h1 class="display-3">PROJECT I</h1>
+            <p class="lead">Workshop FullStack</p>
             <hr class="my-2">
-            <p>tansuta.r</p>
+            <p class="lead">tansuta.r</p>
             <p class="lead">
-                <a class="btn btn-primary btn-lg" href="/products" role="button">view</a>
+                <a class="btn btn-warning btn-lg" href="/products" role="button">PRODUCT</a>
+                <a class="btn btn-danger btn-lg" href="/users" role="button">USER</a>
             </p>
         </div>
 
