--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,8 +5,8 @@
             <hr class="my-2">
             <p class="lead">tansuta.r</p>
             <p class="lead">
-                <a class="btn btn-warning btn-lg" href="/products" role="button">PRODUCT</a>
-                <a class="btn btn-danger btn-lg" href="/users" role="button">USER</a>
+                <a class="btn btn-warning " href="/products" role="button">PRODUCT</a>
+                <a class="btn btn-danger " href="/users" role="button">USER</a>
             </p>
         </div>
 
