--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,8 +5,9 @@
             <hr class="my-2">
             <p class="lead">tansuta.r</p>
             <p class="lead">
-                <a class="btn btn-warning " href="/products" role="button">PRODUCT</a>
-                <a class="btn btn-danger " href="/users" role="button">USER</a>
+                <button type="button" href="/products" class="btn btn-success">PRODUCT<span class="badge">7</span></button>
+                <button type="button" href="/users" class="btn btn-primary">USER <span class="badge">7</span></button>
+                
             </p>
         </div>
 
