--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,7 +6,7 @@
             <p class="lead">tansuta.r</p>
             <p class="lead">
                 <button type="button" href="/products" class="btn btn-success">PRODUCT<span class="badge">7</span></button>
-                <button type="button" href="/users" class="btn btn-primary">USER <span class="badge">7</span></button>
+                <button type="button" href="/users" class="btn btn-warning">USER <span class="badge">3</span></button>
                 
             </p>
         </div>
