--- a/views/pages/user_edit.ejs
+++ b/views/pages/user_edit.ejs
@@ -5,7 +5,9 @@ function fncAlert(){
 alert('Do you want to delete product');
 
 }
-
+$('.datepicker').datepicker({
+    startDate: '-3d'
+});
 </script>
   
 
@@ -34,7 +36,7 @@ alert('Do you want to delete product');
 <div class="form-group">
   <label for="">Creat At</label>
   <input type="text"
-    class="form-control" value="<%= time %>" name="creat at" id="" aria-describedby="helpId" placeholder="" disabled>
+    class="datepicker" data-date-format="mm/dd/yyyy" value="<%= time %>" name="creat at" id="" aria-describedby="helpId" placeholder="" disabled>
   <small id="helpId" class="form-text text-muted">Creat At</small>
   
 </div>
