--- a/views/pages/user_edit.ejs
+++ b/views/pages/user_edit.ejs
@@ -36,7 +36,7 @@ $('.datepicker').datepicker({
 <div class="form-group">
   <label for="">Creat At</label>
   <input type="text"
-    class="datepicker" data-date-format="mm/dd/yyyy" value="<%= time %>" name="creat at" id="" aria-describedby="helpId" placeholder="" disabled>
+    class="datepicker" data-date-format="mm/dd/yyyy" name="creat at" id="" aria-describedby="helpId" placeholder="" disabled>
   <small id="helpId" class="form-text text-muted">Creat At</small>
   
 </div>
