--- a/views/pages/product_edit.ejs
+++ b/views/pages/product_edit.ejs
@@ -3,7 +3,8 @@
   function chkConfirm(){
     if(confirm('Do you want to delete product')==true){
    }else{
-    alert('You selected to cancel.');}
+    alert('You selected to cancel.');
+  /}
 }
 </script>
 <form action ="/product/update" method = "post">
