--- a/views/pages/products.ejs
+++ b/views/pages/products.ejs
@@ -1,7 +1,6 @@
 <% include ../partials/header %>
 <div class="container">
-    <h2>Filterable Table</h2>
-    <p>Type something in the input field to search the table for first names, last names or emails:</p>  
+    <p>Search :</p>  
     <input class="form-control" id="myInput" type="text" placeholder="Search..">
     <br>
     <table class="table table-bordered table-striped">
