--- a/views/pages/product_edit.ejs
+++ b/views/pages/product_edit.ejs
@@ -48,7 +48,8 @@
     </div>
     <script type="text/javascript">
         $(function () {
-            $('#datetimepicker1').datetimepicker();
+            // $('#datetimepicker1').datetimepicker();
+            $('#datetimepicker1').data("DateTimePicker1").FUNCTION()
         });
     </script>
 </div>
