--- a/views/pages/product_edit.ejs
+++ b/views/pages/product_edit.ejs
@@ -34,18 +34,20 @@
   <input type="text"
     class="form-control" value="<%= time %>"name="creat at" id="" aria-describedby="helpId" placeholder="" disabled>
   <small id="helpId" class="form-text text-muted">Creat At</small>
-</div>
-<div class="input-append date form_datetime">
-    <input size="16" type="text" value="" readonly>
-    <span class="add-on"><i class="icon-th"></i></span>
-</div>
- 
-<script type="text/javascript">
-    $(".form_datetime").datetimepicker({
-        format: "dd MM yyyy - hh:ii"
-    });
-</script>    
-
+  <div class='input-group date'>
+      <input type='text' class="form-control datetimepicker" />
+      <span class="input-group-addon datetimepicker-addon">
+        <span class="glyphicon glyphicon-calendar"></span>
+      </span>
+    </div>
+    <script>
+    $(function() {
+  $('.datetimepicker').datetimepicker();
+  
+  $('.datetimepicker-addon').on('click', function() {
+  	$(this).prev('input.datetimepicker').data('DateTimePicker').toggle();
+  });
+});</script>
 
 <a name="" id="" class="btn btn-secondary" href="/products" role="button">CANCLE</a>
 <button type="submit" class="btn btn-success">SAVE</button>
