--- a/views/pages/product_edit.ejs
+++ b/views/pages/product_edit.ejs
@@ -34,21 +34,14 @@
   <input type="text"
     class="form-control" value="<%= time %>"name="creat at" id="" aria-describedby="helpId" placeholder="" disabled>
   <small id="helpId" class="form-text text-muted">Creat At</small>
-  <div class='input-group date'>
-      <input type='text' class="form-control datetimepicker" />
-      <span class="input-group-addon datetimepicker-addon">
-        <span class="glyphicon glyphicon-calendar"></span>
-      </span>
-    </div>
-    <script>
-    $(function() {
-  $('.datetimepicker').datetimepicker();
   
-  $('.datetimepicker-addon').on('click', function() {
-  	$(this).prev('input.datetimepicker').data('DateTimePicker').toggle();
-  });
-});</script>
-
+    <div input id="datepicker" width="276" />
+    <script>
+        $('#datepicker').datepicker({
+            uiLibrary: 'bootstrap4'
+        });
+    </script>
+</div>
 <a name="" id="" class="btn btn-secondary" href="/products" role="button">CANCLE</a>
 <button type="submit" class="btn btn-success">SAVE</button>
 <a name="" id="" name="btnConfirm" value="Confirm" OnClick="chkConfirm()" class="btn btn-danger" href="/product_delete/<%= product.id %>" role="button">DELETE</a>
