--- a/views/pages/product_edit.ejs
+++ b/views/pages/product_edit.ejs
@@ -54,7 +54,7 @@
 <div>
 <a name="" id="" class="btn btn-secondary" href="/products" role="button">CANCLE</a>
 <button type="submit" class="btn btn-success">SAVE</button>
-<a name="" id="" name="btnConfirm" value="Confirm" OnClick="chkConfirm()" class="btn btn-danger" href="#" role="button">DELETE</a>
+<a name="btnConfirm" value="Confirm" OnClick="chkConfirm()" class="btn btn-danger" href="#" role="button">DELETE</a>
 </div>
 </div>
 </form>
