--- a/views/pages/product_edit.ejs
+++ b/views/pages/product_edit.ejs
@@ -44,8 +44,8 @@
     <small id="helpId" class="form-text text-muted">Creat At</small>
     <script>
         $('#datepicker').datepicker({
-            uiLibrary: 'bootstrap4'
-        });
+        showOtherMonths: true
+    });
     </script>
 </div>
 
