--- a/views/pages/reports.ejs
+++ b/views/pages/reports.ejs
@@ -1,4 +1,4 @@
-<!--<% include ../partials/header %>
+<% include ../partials/header %>
 
 <table class="table">
     <thead>
@@ -29,4 +29,3 @@
     </tbody>
 </table>
 <% include ../partials/footer %>
--->
