--- a/views/pages/products.ejs
+++ b/views/pages/products.ejs
@@ -13,7 +13,7 @@
             <th>Title</th>
             <th>Price</th>
 
-            <th><a class="btn btn-danger" href="/newproduct" role="button">ADD NEW</a></th>
+            <th><a class="btn btn-warning" href="/newproduct" role="button">ADD NEW</a></th>
 
         </tr>
     </thead>
