--- a/views/pages/user_edit.ejs
+++ b/views/pages/user_edit.ejs
@@ -8,7 +8,7 @@
     return(null);
   }
 }
-
+</script>
 <form action ="/user/update" method = "post">
 <div class="jumbotron">
 <h1 class="display-4">USERS</h1>
