--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -38,6 +38,12 @@
             aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
+        <style>
+            h1 {
+                background-color: green;
+            }
+            
+            </style>
         <div class="collapse navbar-collapse" id="collapsibleNavId">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item active">
