--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -35,7 +35,7 @@
     
     <style>
         body {
-            background-color: darkcyan;
+            background-color: wheat;
             
         }
         </style>
