--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -34,7 +34,7 @@
     
     <style>
         body {
-            background-color: palevioletred;
+            background-color: pink;
            
         }
         </style>
