--- a/views/pages/products.ejs
+++ b/views/pages/products.ejs
@@ -5,6 +5,7 @@
     <br>
     <table class="table table-bordered table-striped">
 </div>-->
+<div class="jumbotron">
 <table class="table">
     <thead>
         <tr>
@@ -37,4 +38,5 @@
         });
     });
 </script>
+</div>
 <% include ../partials/footer %>
