--- a/views/pages/products.ejs
+++ b/views/pages/products.ejs
@@ -1,7 +1,6 @@
 <% include ../partials/header %>
-
-<table class="table">
-        <div class="jumbotron">
+<div class="jumbotron"></div>
+<table class="table">     
     <thead>
         <tr>
             <th>ID</th>
