--- a/views/pages/users.ejs
+++ b/views/pages/users.ejs
@@ -1,5 +1,5 @@
 <% include ../partials/header %>
-
+<div class="jumbotron">
 <table class="table">
     <thead>
         <tr>
@@ -35,4 +35,5 @@
             });
         });
     </script>
+    </div>
     <% include ../partials/footer %>
