--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,7 +28,8 @@
     <script src="https://cdn.jsdelivr.net/npm/gijgo@1.9.10/js/gijgo.min.js" type="text/javascript"></script>
     <link href="https://cdn.jsdelivr.net/npm/gijgo@1.9.10/css/gijgo.min.css" rel="stylesheet" type="text/css" />
 
-    <!-- report -->
+    <!-- font -->
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
     
     
     
@@ -36,6 +37,7 @@
         body {
             background-color: wheat;
             background-repeat: repeat-x;
+            font-family: 'Lobster', cursive;
            
         }
         </style>
