--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -29,8 +29,7 @@
     <link href="https://cdn.jsdelivr.net/npm/gijgo@1.9.10/css/gijgo.min.css" rel="stylesheet" type="text/css" />
 
     <!-- font -->
-    <link href="https://fonts.googleapis.com/css?family=Lobster|Yanone+Kaffeesatz" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Ropa+Sans" rel="stylesheet">
     
     
     
@@ -38,8 +37,8 @@
         body {
             background-color: wheat;
             background-repeat: repeat-x;
-            
-            font-family: 'Yanone Kaffeesatz', sans-serif;
+            font-family: 'Ropa Sans', sans-serif;
+            font-size: 14px;
            
         }
         </style>
