--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -38,7 +38,7 @@
             background-color: wheat;
             background-repeat: repeat-x;
             font-family: 'Ropa Sans', sans-serif;
-            font-size: 20;
+            font-size: 20px;
            
         }
         </style>
