--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -29,7 +29,7 @@
     <link href="https://cdn.jsdelivr.net/npm/gijgo@1.9.10/css/gijgo.min.css" rel="stylesheet" type="text/css" />
 
     <!-- font -->
-    <link href="https://fonts.googleapis.com/css?family=Ropa+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed|Ropa+Sans" rel="stylesheet">
     
     
     
