--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -3,13 +3,13 @@
             <h1 class="display-3">PROJECT I</h1>
             <p class="lead">Workshop FullStack</p>
             <hr class="my-2">
-            <p class="lead">tansuta.r</p>
+            <p class="lead">tansuta.r</p><i class="fa fa-cloud" style="font-size:45px;color:lightblue;"></i>
             <p class="lead">
                 <!----<button type="button" href="/products" class="btn btn-success">PRODUCT<span class="badge">7</span></button>
                 <button type="button" href="/users" class="btn btn-primary"> <span class="badge">7</span></button>-->
                 <a class="btn btn-warning " href="/products" role="button">PRODUCT<span class="badge">7</span></a>
                 <a class="btn btn-success" href="/users" role="button">USER<span class="badge">3</span></a>
-                <i class="fa fa-cloud" style="font-size:60px;color:lightblue;"></i>
+                
             </p>
         </div>
 
