--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -29,10 +29,11 @@
     <link href="https://cdn.jsdelivr.net/npm/gijgo@1.9.10/css/gijgo.min.css" rel="stylesheet" type="text/css" />
 
     <!-- font -->
-    <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed|Ropa+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Advent+Pro|Fira+Sans+Extra+Condensed|Ropa+Sans" rel="stylesheet">
     
+    <!
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
     
     <style>
@@ -40,6 +41,8 @@
             background-color: wheat;
             background-repeat: repeat-x;
             font-family: 'Ropa Sans', sans-serif;
+            font-family: 'Fira Sans Extra Condensed', sans-serif;
+            font-family: 'Advent Pro', sans-serif;
             font-size: 27px;
            
            
