--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -40,6 +40,7 @@
         body {
             background-color: wheat;
             background-repeat: repeat-x;
+            opacity:0.4;
             font-family: 'Saira Semi Condensed', sans-serif;
             font-size: 22px;
             
