--- a/views/pages/report_user.ejs
+++ b/views/pages/report_user.ejs
@@ -5,18 +5,17 @@
     <thead>
         <tr>
             <th>ID</th>
-            <th>Email</th>
-            <th>Password</th>
-            <th>Detail</th>
+            <th>Title</th>
+            <th>Price</th>
         </tr>
     </thead>
     <tbody id="myTable">
     <%users.forEach(function(user){ %>
 <tr>
             <td scope="row"><%= user.id %></td>
-            <td><%= user.email %></td>
-            <td><%= user.password %></td>
-            <td><%= user.details %></td>
+            <td><%= user.title %></td>
+            <td><%= user.price%></td>
+            <
             <td>
             </td>
         </tr>
