--- a/views/pages/report_user.ejs
+++ b/views/pages/report_user.ejs
@@ -13,7 +13,7 @@
     <%users.forEach(function(user){ %>
 <tr>
             <td scope="row"><%= user.name %></td>
-            <td><%= user.Quantity %></td>
+            <td><%= user.quantity %></td>
             <td><%= user.tags %></td>
             <td>
             </td>
